Change date format on datepicker from full month name to short month name Add to styling on the "warnings" text area on the briefing sheet to prevent scroll bars appearing on ie Copyright notice now just R Brisbourne Substantial changes to "help" and "about" files Now show airspace at all zoom levels above 6 (was 7)

--- a/taskbrief.css
+++ b/taskbrief.css
@@ -40,6 +40,7 @@ text-align: right;
 #warningbox  {
    width: 85%;
    margin: auto;
+   -ms-overflow-style: none;
 }
 
 }
@@ -97,6 +98,7 @@ textarea  {
     width: 100%;
     margin: auto;
     height: 10em;
+    -ms-overflow-style: none;
 }
 
 
