--- a/xcplan.css
+++ b/xcplan.css
@@ -72,7 +72,7 @@ float: right;
    border-style: solid;
    border-width: 2px;
    overflow: auto;
-z-index: 200;
+z-index: 2000;
 background-color: white;
 }
 
